hphp/test/zend/bad/tests/classes/factory_and_singleton_009.php
<?php
class test {

  protected function __destruct() {
  	echo __METHOD__ . "\n";
  }
}

$obj = new test;

?>
===DONE===